# stacked_error

./: Cargo.toml  README.md
.github/workflows/: ci.yml
errorstack/: Cargo.toml
errorstack-derive/: Cargo.toml
errorstack-derive/src/: lib.rs
errorstack/src/: lib.rs
errorstack/tests/: derive.rs  report.rs
errorstack/tests/compile_fail/: from_with_location.rs  from_with_location.stderr  multiple_locations.rs  multiple_locations.stderr  multiple_sources.rs  multiple_sources.stderr  stack_source_not_errorstack.rs  stack_source_not_errorstack.stderr  tuple_struct_error.rs  tuple_struct_error.stderr  tuple_variant.rs  tuple_variant.stderr  union_error.rs  union_error.stderr  unit_variant.rs  unit_variant.stderr
