[package]
name = "errorstack-derive"
description = "Derive macro for errorstack."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
heck = "0.5"

[dev-dependencies]
errorstack = { path = "../errorstack" }
thiserror = "2.0.18"
