[package]
name = "errorstack-derive"
description = "Derive macro for errorstack."
documentation = "https://docs.rs/errorstack-derive"
readme = "../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
heck = "0.5"

[dev-dependencies]
errorstack = { path = "../errorstack" }
thiserror = "2.0.18"
